--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -31,7 +31,7 @@
 /* ==========================================================================
        utility classes
     ========================================================================== */
-.input, .inventory__search--input {
+.input, .inventory__search--input, .locations__search--input {
   background-color: rgba(225, 225, 225, 0.5);
   width: 100%;
   border-radius: 0.25rem;
@@ -40,11 +40,11 @@
   transition: 0.2s ease-in-out;
 }
 
-.input:focus, .inventory__search--input:focus {
+.input:focus, .inventory__search--input:focus, .locations__search--input:focus {
   border: 2px solid #323232;
 }
 
-.round-button, .inventory__button {
+.round-button, .inventory__button, .locations__button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,7 +60,7 @@
   transition: 0.2s ease-in-out;
 }
 
-.round-button:hover, .inventory__button:hover {
+.round-button:hover, .inventory__button:hover, .locations__button:hover {
   background-color: #002f5f;
 }
 
@@ -550,6 +550,288 @@ textarea::placeholder {
 }
 
 .inventory__quantity {
+  width: 13.88%;
+}
+
+.locations {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 1rem;
+}
+
+@media (min-width: 768px) {
+  .locations {
+    margin: 0 1.5rem;
+  }
+}
+
+@media (min-width: 1080px) {
+  .locations {
+    margin: 0 auto;
+    width: 67.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .locations__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 3rem;
+  }
+}
+
+.locations__header {
+  font-family: Avenir Bold;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin: 2rem 0 1rem 0;
+}
+
+@media (min-width: 768px) {
+  .locations__header {
+    font-family: Avenir Bold;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    margin: 0;
+    margin-bottom: 3rem;
+  }
+}
+
+.locations__search {
+  position: relative;
+  margin-bottom: 2rem;
+  width: 90%;
+}
+
+@media (min-width: 768px) {
+  .locations__search {
+    width: 15.75rem;
+  }
+}
+
+.locations__search--input {
+  padding: 0 0.75rem 0 2.5rem;
+  height: 3rem;
+}
+
+.locations__search--icon {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
+
+.locations__bodyMobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+@media (min-width: 768px) {
+  .locations__bodyMobile {
+    display: none;
+  }
+}
+
+.locations__title {
+  font-family: Avenir Bold Demi;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.25px;
+  color: #afafaf;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+  .locations__title {
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media (min-width: 1080px) {
+  .locations__title {
+    margin-bottom: 0;
+  }
+}
+
+.locations__product {
+  font-family: Avenir Bold Demi;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+  .locations__product {
+    font-family: Avenir Bold Demi;
+    font-size: 1rem;
+    line-height: 1.35rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+.locations__title1 {
+  font-family: Avenir Bold Demi;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+  .locations__title1 {
+    font-family: Avenir Bold Demi;
+    font-size: 1rem;
+    line-height: 1.35rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+.locations__text {
+  font-family: Avenir Regular;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  margin: 0;
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .locations__text {
+    font-family: Avenir Regular;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 1080px) {
+  .locations__text {
+    height: 22px;
+    overflow: hidden;
+  }
+}
+
+.locations__kebabIcon {
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .locations__kebabIcon {
+    margin-right: 1.5rem;
+  }
+}
+
+.locations__button {
+  width: 3.75rem;
+  height: 3.75rem;
+  position: absolute;
+  bottom: 5rem;
+  right: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .locations__button {
+    width: 5rem;
+    height: 5rem;
+  }
+}
+
+.locations__button--addIcon {
+  width: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .locations__button--addIcon {
+    width: 1.5rem;
+  }
+}
+
+.locations__bodyTablet {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .locations__bodyTablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.locations__titleWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (min-width: 1080px) {
+  .locations__titleWrapper {
+    margin-bottom: 1.5rem;
+  }
+}
+
+.locations__contentWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1.5rem 0;
+  border-bottom: 1px solid #e1e1e1;
+  height: 6.25rem;
+}
+
+@media (min-width: 1080px) {
+  .locations__contentWrapper {
+    height: 5rem;
+  }
+}
+
+.locations__item {
+  width: 34.44%;
+  padding-right: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .locations__item {
+    margin-bottom: 1.5rem;
+  }
+}
+
+@media (min-width: 1080px) {
+  .locations__item {
+    margin-bottom: 0;
+  }
+}
+
+.locations__order {
+  width: 17.22%;
+}
+
+.locations__location {
+  width: 17.22%;
+}
+
+.locations__quantity {
   width: 13.88%;
 }
 /*# sourceMappingURL=main.css.map */
