--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -552,4 +552,8 @@ textarea::placeholder {
 .inventory__quantity {
   width: 13.88%;
 }
+
+.product {
+  display: block;
+}
 /*# sourceMappingURL=main.css.map */
