--- a/client/src/styles/partials/_inventory.scss
+++ b/client/src/styles/partials/_inventory.scss
@@ -13,10 +13,15 @@
   }
 
   &__wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 8rem;
+
     @include tablet {
-      display: flex;
+      flex-direction: row;
       justify-content: space-between;
       margin-top: 3rem;
+      height: 6rem;
     }
   }
 
@@ -27,7 +32,7 @@
     @include tablet {
       @include headerOne-tablet;
       margin: 0;
-      margin-bottom: 3rem;
+      // margin-bottom: 3rem;
     }
   }
 
@@ -54,13 +59,20 @@
   }
 
   &__bodyMobile {
-    display: flex;
-    align-items: flex-start;
-    border-bottom: 1px solid $mercury;
-
     @include tablet {
       display: none;
     }
+  }
+
+  &__wrapperMobile {
+    display: flex;
+    align-items: flex-start;
+    border-bottom: 1px solid $mercury;
+    margin-top: 2rem;
+  }
+
+  &__container {
+    flex-direction: column;
   }
 
   &__title {
@@ -84,7 +96,7 @@
 
     @include tablet {
       @include subheader-tablet;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0;
     }
   }
 
@@ -117,6 +129,7 @@
     width: 3.75rem;
     height: 3.75rem;
     position: absolute;
+    position: fixed;
     bottom: 5rem;
     right: 1.5rem;
 
@@ -168,7 +181,7 @@
     padding-right: 1.5rem;
 
     @include tablet {
-      margin-bottom: 1.5rem;
+      // margin-bottom: 1.5rem;
     }
 
     @include desktop {
