--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -31,7 +31,7 @@
 /* ==========================================================================
        utility classes
     ========================================================================== */
-.input, .inventory__search--input, .createNew__input, .createNew__descInput {
+.input, .inventory__search--input, .createNew__input, .createNew__location, .createNew__descInput {
   background-color: rgba(225, 225, 225, 0.5);
   width: 100%;
   border-radius: 0.25rem;
@@ -40,7 +40,7 @@
   transition: 0.2s ease-in-out;
 }
 
-.input:focus, .inventory__search--input:focus, .createNew__input:focus, .createNew__descInput:focus {
+.input:focus, .inventory__search--input:focus, .createNew__input:focus, .createNew__location:focus, .createNew__descInput:focus {
   border: 2px solid #323232;
 }
 
@@ -340,15 +340,28 @@ textarea::placeholder {
   }
 }
 
+.inventory__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 8rem;
+}
+
 @media (min-width: 768px) {
   .inventory__wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-top: 3rem;
+    height: 6rem;
   }
 }
 
@@ -365,7 +378,6 @@ textarea::placeholder {
     font-size: 2.25rem;
     line-height: 2.75rem;
     margin: 0;
-    margin-bottom: 3rem;
   }
 }
 
@@ -392,7 +404,13 @@ textarea::placeholder {
   left: 1rem;
 }
 
-.inventory__bodyMobile {
+@media (min-width: 768px) {
+  .inventory__bodyMobile {
+    display: none;
+  }
+}
+
+.inventory__wrapperMobile {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -400,12 +418,14 @@ textarea::placeholder {
       -ms-flex-align: start;
           align-items: flex-start;
   border-bottom: 1px solid #e1e1e1;
+  margin-top: 2rem;
 }
 
-@media (min-width: 768px) {
-  .inventory__bodyMobile {
-    display: none;
-  }
+.inventory__container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .inventory__title {
@@ -443,7 +463,7 @@ textarea::placeholder {
     font-family: Avenir Bold Demi;
     font-size: 1rem;
     line-height: 1.35rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
   }
 }
 
@@ -485,6 +505,7 @@ textarea::placeholder {
   width: 3.75rem;
   height: 3.75rem;
   position: absolute;
+  position: fixed;
   bottom: 5rem;
   right: 1.5rem;
 }
@@ -557,12 +578,6 @@ textarea::placeholder {
   padding-right: 1.5rem;
 }
 
-@media (min-width: 768px) {
-  .inventory__item {
-    margin-bottom: 1.5rem;
-  }
-}
-
 @media (min-width: 1080px) {
   .inventory__item {
     margin-bottom: 0;
@@ -588,7 +603,7 @@ textarea::placeholder {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.createNew__container {
+.createNew__form {
   position: absolute;
   padding: 0 3rem;
   border-radius: 0.25rem;
@@ -649,6 +664,10 @@ textarea::placeholder {
   height: 3rem;
   width: 13.75rem;
   padding: 0 0.75rem 0 0.75rem;
+}
+
+.createNew__location {
+  margin-bottom: 1.5rem;
 }
 
 .createNew__descInput {
