--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -554,6 +554,78 @@ textarea::placeholder {
 }
 
 .product {
-  display: block;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.product__name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.product__name h2 {
+  padding-left: 15px;
+  font-family: Avenir Bold;
+  padding-top: 5px;
+}
+
+.product__status {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100px;
+  height: 30px;
+  border-radius: 4px;
+  background-color: #12b812;
+  color: white;
+  font-family: Avenir Bold Demi;
+  margin-bottom: 35px;
+}
+
+.product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
+  font-size: 13px;
+  line-height: 18px;
+}
+
+.product__itemDesc-title, .product__lastOrder-title, .product__location-title, .product__quantity-title, .product__categories-title {
+  font-size: 14px;
+  color: #afafaf;
+}
+
+.product__btn {
+  width: 100%;
+  height: 50px;
+  margin: 20px 0;
+  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 4px;
+  background-color: #002f5f;
+}
+
+.product__btn button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: Avenir Bold Demi;
 }
 /*# sourceMappingURL=main.css.map */
