--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -324,18 +324,19 @@ textarea::placeholder {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 1rem;
+  margin: 0 1rem 3rem 1rem;
 }
 
 @media (min-width: 768px) {
   .inventory {
-    margin: 0 1.5rem;
+    margin: 0 1.5rem 3rem 1.5rem;
   }
 }
 
 @media (min-width: 1080px) {
   .inventory {
     margin: 0 auto;
+    margin-bottom: 3rem;
     width: 67.5rem;
   }
 }
@@ -549,12 +550,6 @@ textarea::placeholder {
   display: flex;
 }
 
-@media (min-width: 1080px) {
-  .inventory__titleWrapper {
-    margin-bottom: 1.5rem;
-  }
-}
-
 .inventory__contentWrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -670,6 +665,37 @@ textarea::placeholder {
   margin-bottom: 1.5rem;
 }
 
+.createNew__status {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.createNew__status--text {
+  font-family: Avenir Regular;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  color: #323232;
+}
+
+@media (min-width: 768px) {
+  .createNew__status--text {
+    font-family: Avenir Regular;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+
+.createNew__status--toggle {
+  margin-right: 1rem;
+}
+
 .createNew__descInput {
   resize: none;
   padding: 0.5rem 0 0 0.75rem;
@@ -679,12 +705,7 @@ textarea::placeholder {
 @media (min-width: 768px) {
   .createNew__descInput {
     margin-bottom: 2.5rem;
-  }
-}
-
-@media (min-width: 1080px) {
-  .createNew__descInput {
-    height: 5.875rem;
+    height: 5rem;
   }
 }
 
