--- a/client/src/styles/partials/_locations.scss
+++ b/client/src/styles/partials/_locations.scss
@@ -17,6 +17,9 @@
       display: flex;
       justify-content: space-between;
       margin-top: 3rem;
+      margin-bottom: 3rem;
+      height: 75px;
+      height: fit-content;
     }
   }
 
@@ -28,6 +31,7 @@
       @include headerOne-tablet;
       margin: 0;
       margin-bottom: 3rem;
+      margin-bottom: 0;
     }
   }
 
@@ -38,6 +42,7 @@
 
     @include tablet {
       width: 15.75rem;
+      margin-bottom: 0;
     }
 
     &--input {
@@ -88,18 +93,48 @@
     }
   }
 
-  &__title1 {
+  &__titleMobile {
     @include paragraph-bold;
     margin-top: 0;
     margin-bottom: 1rem;
 
     @include tablet {
       @include subheader-tablet;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0;
+      margin-top: 48px;
+    }
+  }
+
+  &__titleTablet {
+    @include paragraph-bold;
+    margin-top: 0;
+    margin-bottom: 1rem;
+
+    @include tablet {
+      @include subheader-tablet;
+      margin-bottom: 0;
+      width: max-content;
     }
   }
 
   &__text {
+    @include paragraph;
+    margin: 0;
+    margin-bottom: 1.5rem;
+
+    @include tablet {
+      @include paragraph-tablet;
+      margin-bottom: 0;
+      width: max-content;
+    }
+
+    @include desktop {
+      height: 22px;
+      overflow: hidden;
+    }
+  }
+
+  &__textTablet {
     @include paragraph;
     margin: 0;
     margin-bottom: 1.5rem;
@@ -115,11 +150,13 @@
     }
   }
 
-  &__kebabIcon {
+  &__rightArrowIcon {
     margin-left: auto;
 
     @include tablet {
       margin-right: 1.5rem;
+      margin-right: initial;
+      padding-top: 15px;
     }
   }
 
@@ -174,12 +211,32 @@
     }
   }
 
+  &__contentWrapperTablet {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.5rem 0;
+    border-bottom: 1px solid $mercury;
+    height: 6.25rem;
+    @include tablet {
+      align-items: initial;
+      height: fit-content;
+      padding-top: 0;
+    }
+    @include desktop {
+      height: 5rem;
+    }
+  }
+
   &__item {
     width: 34.44%;
     padding-right: 1.5rem;
 
     @include tablet {
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
+      display: flex;
+      width: initial;
+      padding-right: initial;
     }
 
     @include desktop {
@@ -189,6 +246,8 @@
 
   &__order {
     width: 17.22%;
+    width: 25%;
+    margin-right: 50px;
   }
 
   &__location {
@@ -197,5 +256,24 @@
 
   &__quantity {
     width: 13.88%;
+    width: 25%;
+    margin-right: 50px;
+  }
+
+  &__textContainer {
+    display: flex;
+  }
+
+  &__imageContainer {
+    @include tablet {
+      width: fit-content;
+      margin-left: 44.3rem;
+      margin-left: 74%;
+      margin-left: 69vw;
+      height: fit-content;
+      width: 100%;
+      display: flex;
+      justify-items: flex-end;
+    }
   }
 }
