--- a/client/src/styles/partials/_createNew.scss
+++ b/client/src/styles/partials/_createNew.scss
@@ -1,52 +1,85 @@
 .createNew {
-  //   position: fixed;
+  position: fixed;
   width: 100%;
   height: 100%;
   z-index: 99;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: $white;
+
+  @include tablet {
+    background-color: rgba(0, 0, 0, 0.6);
+  }
 
   &__form {
-    position: absolute;
-    padding: 0 3rem;
-    border-radius: 0.25rem;
-    top: 20%;
-    left: 20%;
-    width: 36rem;
-    height: 39rem;
-    background-color: $white;
+    margin: 0 1rem;
+
+    @include tablet {
+      position: absolute;
+      padding: 0 3rem;
+      border-radius: 0.25rem;
+      top: 20%;
+      left: 30%;
+      width: 36rem;
+      height: 39rem;
+      background-color: $white;
+      margin: 0;
+    }
   }
 
   &__header {
     @include header;
+    margin: 2rem 0;
 
     @include tablet {
       @include headerOne-tablet;
-      margin: 3.5rem 0 3rem 0;
+      margin: 3rem 0;
     }
   }
 
   &__wrapper {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &--input {
+      display: flex;
+      flex-direction: column;
+    }
 
     &--btn {
       display: flex;
-      align-items: center;
-      justify-content: flex-end;
+      flex-direction: column;
+
+      @include tablet {
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: flex-start;
+      }
     }
   }
 
   &__label {
     @include label;
-    width: 13.75rem;
-    margin-bottom: 1.5rem;
+    width: 18rem;
+
+    @include tablet {
+      width: 13.75rem;
+    }
   }
 
   &__input {
     @extend .input;
     height: 3rem;
-    width: 13.75rem;
-    padding: 0 0.75rem 0 0.75rem;
+    padding: 0 0.75rem;
+    margin-bottom: 1.5rem;
+
+    @include tablet {
+      width: 13.75rem;
+      padding-left: 1rem;
+    }
   }
 
   &__location {
@@ -77,23 +110,28 @@
     @extend .input;
     resize: none;
     padding: 0.5rem 0 0 0.75rem;
-    height: 8.938rem;
+    height: 5rem;
+    display: flex;
+  }
+
+  &__btn {
+    @extend .button;
+    margin: 2rem 0;
 
     @include tablet {
-      margin-bottom: 2.5rem;
-      height: 5rem;
+      width: 10rem;
+      height: 3rem;
     }
   }
 
   &__cancel {
     @include paragraph-bold;
     color: $instock-blue;
-    margin-right: 3rem;
-  }
+    align-self: center;
+    margin: 0;
 
-  &__btn {
-    @extend .button;
-    width: 10rem;
-    height: 3rem;
+    @include tablet {
+      margin-right: 3rem;
+    }
   }
 }
