--- a/client/src/styles/partials/_locations.scss
+++ b/client/src/styles/partials/_locations.scss
@@ -189,6 +189,9 @@
       display: flex;
       flex-direction: column;
     }
+    @include desktop {
+      display: none;
+    }
   }
 
   &__titleWrapper {
