--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -583,7 +583,7 @@ textarea::placeholder {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100px;
+  width: 110px;
   height: 30px;
   border-radius: 4px;
   background-color: #12b812;
@@ -627,5 +627,76 @@ textarea::placeholder {
   color: #ffffff;
   font-size: 16px;
   font-family: Avenir Bold Demi;
+}
+
+@media (min-width: 768px) {
+  .product-container1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: 2px solid #e1e1e1;
+  }
+  .product__name h2 {
+    font-family: Avenir Bold;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+  .product__status {
+    margin-bottom: 0;
+    margin-left: 35px;
+  }
+  .product__itemDesc-title {
+    font-family: Avenir Bold Demi;
+    font-size: 1rem;
+    line-height: 1.35rem;
+  }
+  .product__lastOrder-title, .product__location-title, .product__quantity-title, .product__categories-title {
+    font-family: Avenir Bold Demi;
+    font-size: 1rem;
+    line-height: 1.35rem;
+    color: #afafaf;
+  }
+  .product .product-container2 {
+    width: 95%;
+    margin: 0 auto;
+  }
+  .product__itemDesc {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
+    font-family: Avenir Regular;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+  .product .product-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 70%;
+  }
+  .product__categories {
+    padding-bottom: 30px;
+    border-bottom: 2px solid #e1e1e1;
+  }
+  .product__btn {
+    width: 200px;
+  }
+  .product__btn-container {
+    width: 95%;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
 }
 /*# sourceMappingURL=main.css.map */
