--- a/client/src/styles/partials/_product.scss
+++ b/client/src/styles/partials/_product.scss
@@ -14,7 +14,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100px;
+        width: 110px;
         height: 30px;
         border-radius: 4px;
         background-color: rgb(18, 184, 18);
@@ -57,6 +57,71 @@
             color: $white;
             font-size: 16px;
             font-family: Avenir Bold Demi;
+        }
+    }
+}
+
+// tablet version
+@include tablet {
+    .product-container1 {
+        display: flex;
+        align-items: center;
+        border-bottom: 2px solid $mercury;
+    }
+    .product {
+        &__name {
+            h2 {
+                @include headerOne-tablet;
+            }
+        }
+        &__status {
+            margin-bottom: 0;
+            margin-left: 35px;
+        }
+        &__itemDesc-title {
+            @include subheader-tablet;
+        }
+        &__lastOrder-title,
+        &__location-title,
+        &__quantity-title,
+        &__categories-title {
+            @include subheader-tablet;
+            color: $silver;
+        }
+        .product-container2 {
+            width: 95%;
+            margin: 0 auto;
+        }
+        &__itemDesc {
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+        &__itemDesc,
+        &__lastOrder,
+        &__location,
+        &__quantity,
+        &__categories {
+            P {
+                @include paragraph-tablet;
+            }
+        }
+        .product-wrapper {
+            display: flex;
+            justify-content: space-between;
+            width: 70%;
+        }
+        &__categories {
+            padding-bottom: 30px;
+            border-bottom: 2px solid $mercury;
+        }
+        &__btn {
+            width: 200px;
+        }
+        &__btn-container {
+            width: 95%;
+            margin: 0 auto;
+            display: flex;
+            justify-content: flex-end;
         }
     }
 }
