created NewWarehouse comp

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -5,3 +5,4 @@
 @import "./partials/header";
 @import "./partials/inventory";
 @import "./partials/createNew";
+// @import "./partials/newWarehouse";
