--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -624,6 +624,24 @@ textarea::placeholder {
   }
 }
 
+.createNew__form--warehouse {
+  margin: 0 1rem;
+}
+
+@media (min-width: 768px) {
+  .createNew__form--warehouse {
+    position: absolute;
+    padding: 0 3rem;
+    border-radius: 0.25rem;
+    top: 20%;
+    left: 30%;
+    width: 36rem;
+    height: 45rem;
+    background-color: #ffffff;
+    margin: 0;
+  }
+}
+
 .createNew__header {
   font-family: Avenir Bold;
   font-size: 1.5rem;
@@ -637,6 +655,22 @@ textarea::placeholder {
     font-size: 2.25rem;
     line-height: 2.75rem;
     margin: 3rem 0;
+  }
+}
+
+.createNew__header--warehouse {
+  font-family: Avenir Bold;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin: 2rem 0;
+}
+
+@media (min-width: 768px) {
+  .createNew__header--warehouse {
+    font-family: Avenir Bold;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    margin: 3rem 0 2rem 0;
   }
 }
 
