--- a/client/src/styles/partials/_newWarehouse.scss
+++ b/client/src/styles/partials/_newWarehouse.scss
@@ -1,4 +1,4 @@
-.createNew {
+.newWarehouse {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -23,22 +23,6 @@
       background-color: $white;
       margin: 0;
     }
-
-    &--warehouse {
-      margin: 0 1rem;
-
-      @include tablet {
-        position: absolute;
-        padding: 0 3rem;
-        border-radius: 0.25rem;
-        top: 20%;
-        left: 30%;
-        width: 36rem;
-        height: 45rem;
-        background-color: $white;
-        margin: 0;
-      }
-    }
   }
 
   &__header {
@@ -48,16 +32,6 @@
     @include tablet {
       @include headerOne-tablet;
       margin: 3rem 0;
-    }
-
-    &--warehouse {
-      @include header;
-      margin: 2rem 0;
-
-      @include tablet {
-        @include headerOne-tablet;
-        margin: 3rem 0 2rem 0;
-      }
     }
   }
 
