--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -593,12 +593,15 @@ textarea::placeholder {
 }
 
 .product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
-  font-size: 13px;
-  line-height: 18px;
+  font-family: Avenir Regular;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
 }
 
 .product__itemDesc-title, .product__lastOrder-title, .product__location-title, .product__quantity-title, .product__categories-title {
-  font-size: 14px;
+  font-family: Avenir Bold Demi;
+  font-size: 1rem;
+  line-height: 1.38rem;
   color: #afafaf;
 }
 
@@ -662,6 +665,7 @@ textarea::placeholder {
   .product .product-container2 {
     width: 95%;
     margin: 0 auto;
+    border-bottom: 2px solid #e1e1e1;
   }
   .product__itemDesc {
     margin-top: 30px;
@@ -683,10 +687,10 @@ textarea::placeholder {
   }
   .product__categories {
     padding-bottom: 30px;
-    border-bottom: 2px solid #e1e1e1;
   }
   .product__btn {
-    width: 200px;
+    width: 160px;
+    height: 48px;
   }
   .product__btn-container {
     width: 95%;
@@ -697,6 +701,61 @@ textarea::placeholder {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+  }
+}
+
+@media (min-width: 1080px) {
+  .product {
+    max-width: 1080px;
+  }
+  .product__itemInfo-wrapper {
+    width: 100%;
+  }
+  .product__name img {
+    width: 16px;
+    height: 24px;
+  }
+  .product__status {
+    width: 88px;
+    height: 24px;
+    margin-left: 24px;
+  }
+  .product__status p {
+    font-size: 12px;
+    padding-top: 4px;
+  }
+  .product__itemDesc-title {
+    margin-top: 40px;
+    margin-bottom: 24px;
+  }
+  .product__itemDesc {
+    margin: 0;
+  }
+  .product__lastOrder-title, .product__location-title {
+    margin: 0;
+  }
+  .product__categories {
+    padding-top: 42px;
+    padding-bottom: 48px;
+  }
+  .product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
+    margin: 24px 0;
+  }
+  .product__itemInfo-wrapper {
+    padding-left: 40px;
+  }
+  .product__btn {
+    margin: 40px 0;
+  }
+  .product-container2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: 2px solid #e1e1e1;
+  }
+  .product-wrapper {
+    margin-top: 40px;
+    margin-bottom: 56px;
   }
 }
 /*# sourceMappingURL=main.css.map */
