--- a/client/src/styles/partials/_product.scss
+++ b/client/src/styles/partials/_product.scss
@@ -28,8 +28,7 @@
     &__quantity,
     &__categories {
         P {
-            font-size: 13px;
-            line-height: 18px;
+            @include paragraph;
         }
     }
     &__itemDesc-title,
@@ -37,7 +36,7 @@
     &__location-title,
     &__quantity-title,
     &__categories-title {
-        font-size: 14px;
+        @include subheader;
         color: $silver;
     }
     &__btn {
@@ -91,6 +90,7 @@
         .product-container2 {
             width: 95%;
             margin: 0 auto;
+            border-bottom: 2px solid $mercury;
         }
         &__itemDesc {
             margin-top: 30px;
@@ -112,10 +112,10 @@
         }
         &__categories {
             padding-bottom: 30px;
-            border-bottom: 2px solid $mercury;
         }
         &__btn {
-            width: 200px;
+            width: 160px;
+            height: 48px;
         }
         &__btn-container {
             width: 95%;
@@ -123,5 +123,66 @@
             display: flex;
             justify-content: flex-end;
         }
+    }
+}
+
+//desktop version
+@include desktop {
+    .product {
+        max-width: 1080px;
+        &__itemInfo-wrapper {
+            width: 100%;
+        }
+        &__name img {
+            width: 16px;
+            height: 24px;
+        }
+        &__status {
+            width: 88px;
+            height: 24px;
+            margin-left: 24px;
+            p {
+                font-size: 12px;
+                padding-top: 4px;
+            }
+        }
+        &__itemDesc-title {
+            margin-top: 40px;
+            margin-bottom: 24px;
+        }
+        &__itemDesc {
+            margin: 0;
+        }
+        &__lastOrder-title,
+        &__location-title {
+            margin: 0;
+        }
+        &__categories {
+            padding-top: 42px;
+            padding-bottom: 48px;
+        }
+        &__itemDesc,
+        &__lastOrder,
+        &__location,
+        &__quantity,
+        &__categories {
+            P {
+                margin: 24px 0;
+            }
+        }
+        &__itemInfo-wrapper {
+            padding-left: 40px;
+        }
+        &__btn {
+            margin: 40px 0;
+        }
+    }
+    .product-container2 {
+        display: flex;
+        border-bottom: 2px solid $mercury;
+    }
+    .product-wrapper {
+        margin-top: 40px;
+        margin-bottom: 56px;
     }
 }
