--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -4,4 +4,5 @@
 @import "./partials/global";
 @import "./partials/header";
 @import "./partials/inventory";
+@import "./partials/createNew";
 @import "./partials/product";
