--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -31,7 +31,7 @@
 /* ==========================================================================
        utility classes
     ========================================================================== */
-.input, .inventory__search--input {
+.input, .inventory__search--input, .createNew__input, .createNew__location, .createNew__descInput {
   background-color: rgba(225, 225, 225, 0.5);
   width: 100%;
   border-radius: 0.25rem;
@@ -40,7 +40,7 @@
   transition: 0.2s ease-in-out;
 }
 
-.input:focus, .inventory__search--input:focus {
+.input:focus, .inventory__search--input:focus, .createNew__input:focus, .createNew__location:focus, .createNew__descInput:focus {
   border: 2px solid #323232;
 }
 
@@ -61,6 +61,34 @@
 }
 
 .round-button:hover, .inventory__button:hover {
+  background-color: #002f5f;
+}
+
+.button, .createNew__btn {
+  font-family: Avenir Bold Demi;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  background-color: #004892;
+  color: #ffffff;
+  border-radius: 0.25rem;
+  letter-spacing: 0.5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 3rem;
+  padding: 0;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.button:hover, .createNew__btn:hover, .button:focus, .createNew__btn:focus {
   background-color: #002f5f;
 }
 
@@ -296,31 +324,45 @@ textarea::placeholder {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 1rem;
+  margin: 0 1rem 3rem 1rem;
 }
 
 @media (min-width: 768px) {
   .inventory {
-    margin: 0 1.5rem;
+    margin: 0 1.5rem 3rem 1.5rem;
   }
 }
 
 @media (min-width: 1080px) {
   .inventory {
     margin: 0 auto;
+    margin-bottom: 3rem;
     width: 67.5rem;
   }
 }
 
+.inventory__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 8rem;
+}
+
 @media (min-width: 768px) {
   .inventory__wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-top: 3rem;
+    height: 6rem;
   }
 }
 
@@ -337,7 +379,6 @@ textarea::placeholder {
     font-size: 2.25rem;
     line-height: 2.75rem;
     margin: 0;
-    margin-bottom: 3rem;
   }
 }
 
@@ -364,7 +405,13 @@ textarea::placeholder {
   left: 1rem;
 }
 
-.inventory__bodyMobile {
+@media (min-width: 768px) {
+  .inventory__bodyMobile {
+    display: none;
+  }
+}
+
+.inventory__wrapperMobile {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -372,12 +419,14 @@ textarea::placeholder {
       -ms-flex-align: start;
           align-items: flex-start;
   border-bottom: 1px solid #e1e1e1;
+  margin-top: 2rem;
 }
 
-@media (min-width: 768px) {
-  .inventory__bodyMobile {
-    display: none;
-  }
+.inventory__container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .inventory__title {
@@ -415,7 +464,7 @@ textarea::placeholder {
     font-family: Avenir Bold Demi;
     font-size: 1rem;
     line-height: 1.35rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
   }
 }
 
@@ -457,14 +506,16 @@ textarea::placeholder {
   width: 3.75rem;
   height: 3.75rem;
   position: absolute;
+  position: fixed;
   bottom: 5rem;
-  right: 1.5rem;
+  right: 2rem;
 }
 
 @media (min-width: 768px) {
   .inventory__button {
     width: 5rem;
     height: 5rem;
+    right: 3rem;
   }
 }
 
@@ -500,12 +551,6 @@ textarea::placeholder {
   display: flex;
 }
 
-@media (min-width: 1080px) {
-  .inventory__titleWrapper {
-    margin-bottom: 1.5rem;
-  }
-}
-
 .inventory__contentWrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -529,12 +574,6 @@ textarea::placeholder {
   padding-right: 1.5rem;
 }
 
-@media (min-width: 768px) {
-  .inventory__item {
-    margin-bottom: 1.5rem;
-  }
-}
-
 @media (min-width: 1080px) {
   .inventory__item {
     margin-bottom: 0;
@@ -551,6 +590,211 @@ textarea::placeholder {
 
 .inventory__quantity {
   width: 13.88%;
+}
+
+.createNew {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  background-color: #ffffff;
+}
+
+@media (min-width: 768px) {
+  .createNew {
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+}
+
+.createNew__form {
+  margin: 0 1rem;
+}
+
+@media (min-width: 768px) {
+  .createNew__form {
+    position: absolute;
+    padding: 0 3rem;
+    border-radius: 0.25rem;
+    top: 20%;
+    left: 30%;
+    width: 36rem;
+    height: 39rem;
+    background-color: #ffffff;
+    margin: 0;
+  }
+}
+
+.createNew__header {
+  font-family: Avenir Bold;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin: 2rem 0;
+}
+
+@media (min-width: 768px) {
+  .createNew__header {
+    font-family: Avenir Bold;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    margin: 3rem 0;
+  }
+}
+
+.createNew__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .createNew__wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.createNew__wrapper--input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.createNew__wrapper--btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .createNew__wrapper--btn {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+.createNew__label {
+  font-family: Avenir Bold Demi;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.25px;
+  color: #afafaf;
+  width: 18rem;
+}
+
+@media (min-width: 768px) {
+  .createNew__label {
+    width: 13.75rem;
+  }
+}
+
+.createNew__input {
+  height: 3rem;
+  padding: 0 0.75rem;
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .createNew__input {
+    width: 13.75rem;
+    padding-left: 1rem;
+  }
+}
+
+.createNew__location {
+  margin-bottom: 1.5rem;
+}
+
+.createNew__status {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.createNew__status--text {
+  font-family: Avenir Regular;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  color: #323232;
+}
+
+@media (min-width: 768px) {
+  .createNew__status--text {
+    font-family: Avenir Regular;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+
+.createNew__status--toggle {
+  margin-right: 1rem;
+}
+
+.createNew__descInput {
+  resize: none;
+  padding: 0.5rem 0 0 0.75rem;
+  height: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.createNew__btn {
+  margin: 2rem 0;
+}
+
+@media (min-width: 768px) {
+  .createNew__btn {
+    width: 10rem;
+    height: 3rem;
+  }
+}
+
+.createNew__cancel {
+  font-family: Avenir Bold Demi;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  color: #004892;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .createNew__cancel {
+    margin-right: 3rem;
+  }
 }
 
 .product {
