--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -297,11 +297,16 @@ textarea::placeholder {
   margin: 0;
   width: 50%;
   height: 1.8rem;
-  text-align: center;
   color: #afafaf;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.header__link--active, .header__link:hover {
+.header__link:active, .header__link:hover {
   color: #ffffff;
   font-family: Avenir Bold Demi;
   border-bottom: 0.25rem solid #ffffff;
