--- a/client/src/styles/partials/_header.scss
+++ b/client/src/styles/partials/_header.scss
@@ -55,10 +55,11 @@
     margin: 0;
     width: 50%;
     height: 1.8rem;
-    text-align: center;
     color: $silver;
+    display: flex;
+    justify-content: center;
 
-    &--active,
+    &:active,
     &:hover {
       color: $white;
       font-family: Avenir Bold Demi;
